@@ -28,6 +28,8 @@ import java.util.Map;
 import java.util.NavigableSet;
 import java.util.stream.Collectors;
 
+import com.google.common.collect.ImmutableList;
+
 import eu.solven.adhoc.column.IAdhocColumn;
 import eu.solven.adhoc.column.ICalculatedColumn;
 import eu.solven.adhoc.data.column.IMultitypeMergeableColumn;
@@ -88,7 +90,7 @@ public class DispatchorQueryStep extends ATransformatorQueryStep implements ITra
 
 	@Override
 	public List<CubeQueryStep> getUnderlyingSteps() {
-		IDecomposition decomposition = makeDecomposition(List.of());
+		IDecomposition decomposition = makeDecomposition(ImmutableList.of());
 
 		List<IWhereGroupByQuery> measurelessSteps = decomposition.getUnderlyingSteps(step);
 
