@@ -86,11 +86,11 @@ public class AliasingContext implements ITableAliaser, ITableReverseAliaser {
 				return originalToAlias.get(underlying);
 			}
 		} else if (identity.contains(underlying)) {
-			return Set.of(underlying);
+			return ImmutableSet.of(underlying);
 		} else if (nameToCalculated.containsKey(underlying)) {
-			return Set.of(underlying);
+			return ImmutableSet.of(underlying);
 		} else {
-			return Set.of();
+			return ImmutableSet.of();
 		}
 	}
 
